[project]
name = "crewai_knowledge_chatbot"
version = "0.1.0"
description = "crewai_knowledge_chatbot using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
crewai_knowledge_chatbot = "crewai_knowledge_chatbot.main:run"
run_crew = "crewai_knowledge_chatbot.main:run"
train = "crewai_knowledge_chatbot.main:train"
replay = "crewai_knowledge_chatbot.main:replay"
test = "crewai_knowledge_chatbot.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
